# pdf-summarizer

./: README.md  poetry.toml  pyproject.toml
src/: main.py
src/llm/: config.py  pdf_loader.py  pdf_rag_client.py  pdf_rag_client_factory.py
src/middlewares/: config.py  langsmith_context.py  langsmith_trace.py  langsmith_tracing_middleware.py
src/pdf_summarizer/: main.py
src/pdf_summarizer/llm/: client.py  config.py
src/pdf_summarizer/middlewares/: config.py  langsmith.py
src/pdf_summarizer/models/: schemas.py  type.py
src/pdf_summarizer/routers/: summarize.py
src/pdf_summarizer/services/: summarizer.py
src/routers/: pdf_chat.py
src/routers/request/: question_request.py
src/services/: pdf_chat_service.py
tests/: type.py
tests/pdf_summarizer/models/: test_type.py
